--- a/templates/header.html
+++ b/templates/header.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
   </head>
   <body>
       <header>
-        <div class="container">
-            <div id="nav_head">
-              <h1> Take a TEST!!</h1>
-            </div>
-            <nav>
-              <ul>
-                  <li class="current"><a href="{{ url_for('index')}}">HOME</a></li>
-                  <li><a href="">Logout</a></li>
-                  <li><a href="">Login</a></li>
-              </ul>
-            </nav>
-        </div>
+        <nav>
+          <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Logo</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li class="current"><a href="{{ url_for('home')}}">HOME</a></li>
+              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+              <li><a href="">Login</a></li>
+            </ul>
+          </div>
+        </nav>
       </header>      
       {% block content %}{% endblock %}
       
