--- a/templates/results.html
+++ b/templates/results.html
@@ -4,8 +4,8 @@
 <div class="container">
   <div class="sort">
     <select>
-      <option value="volvo">Name</option>
-      <option value="saab">Date</option>
+      <option value="Name">Name</option>
+      <option value="Date">Date</option>
     </select> 
   </div>
 </div>
