--- a/templates/results.html
+++ b/templates/results.html
@@ -1,20 +1,26 @@
 {% extends "header.html" %}
 {% block content%}
 
-<div class="container">
-  <div class="sort">
-    <select>
-      <option value="Name">Name</option>
-      <option value="Date">Date</option>
-    </select> 
-  </div>
-</div>
 <div class="container" >
+  <div class="input-field col s12">
+      <select style="display: block;" id="sortBy">
+        <option value="" disabled selected>Sort Results</option>
+        <option value="title">Sort by Title</option>
+        <option value="date">Sort by Published Date</option>
+      </select>
+    </div>
   <div id="result" class="result">
     {% for i in range(0,length) %}
-    <iframe width="560" height="400" src="https://www.youtube.com/embed/{{ response['items'][i]['id']['videoId'] }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div class="youtube-iframe-container" data-title="{{ response['items'][i]['snippet']['title'] }}" data-published="{{ response['items'][i]['snippet']['publishedAt'] }}">
+      TITLE : {{ response['items'][i]['snippet']['title'] }}
+      <br>
+      PUBLISHED AT : {{ response['items'][i]['snippet']['publishedAt'] }}
+      <br>
+      <iframe width="560" height="400" src="https://www.youtube.com/embed/{{ response['items'][i]['id']['videoId'] }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <hr>
+    </div>
     {% endfor %}
   </div>
 </div>
-
+<script src="{{ url_for('static', filename='js/shared.js') }}"></script>
 {%endblock%}
